# agent-toolkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  HISTORY.md  README.md  REFACTOR_SUMMARY.md  VALIDATE_RELEASE.md  check_tag.py  commitlint.config.js  pyproject.toml  repomix.xml  requirements.txt
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.cursor/rules/: mcp-guidelines.mdc  tool-development-guide.mdc
.github/workflows/: checks.yml  mcp-build.yml  mcp-cli-publish.yaml  mcp-scheduled-scan.yml  mcp-server-release.yml  mcp-trivy.yml  release.yml  test-docker-build.yml  test-dockerhub-push.yml  test-release.yml  verify-snyk-status.yml
claude-plugin/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md
claude-plugin/.claude-plugin/: marketplace.json  plugin.json
claude-plugin/skills/data-quality/: SKILL.md
claude-plugin/skills/explore-lineage/: SKILL.md
claude-plugin/skills/manage-domains/: SKILL.md
claude-plugin/skills/manage-glossary/: SKILL.md
claude-plugin/skills/review-governance/: SKILL.md
claude-plugin/skills/search-assets/: SKILL.md
claude-plugin/skills/update-assets/: SKILL.md
codex-plugin/: README.md
codex-plugin/.codex-plugin/: plugin.json
cursor-plugin/: README.md
cursor-plugin/.cursor-plugin/: plugin.json
deployment/: README.md  Readme.md
mcp-cli/: .gitignore  PLAN.md  README.md  SKILL.md  atlan_cli.py  pyproject.toml
modelcontextprotocol/: .env.template  Dockerfile  README.md  client.py  config.py  entrypoint.sh  middleware.py  package_header_middleware.py  playground.py  pyproject.toml  repomix-output.md  requirements.txt  resources.py  server.py  settings.py  tools.py  toon_config_example.env  version.py
modelcontextprotocol/.cursor/rules/: mcp-guidelines.mdc  project-structure.mdc  tool-development-guide.mdc
modelcontextprotocol/.github/workflows/: test.yml
modelcontextprotocol/docs/: DEPLOYMENT.md  LOCAL_BUILD.md  VSCODE_INTEGRATION.md  WINDOWS_SETUP.md
modelcontextprotocol/docs/deployment/: README.md
modelcontextprotocol/prompts/: __init__.py  data_analysis.py  governance.py
modelcontextprotocol/resources/: __init__.py  config.py  reports.py  templates.py
modelcontextprotocol/tests/: __init__.py  test_assets.py  test_dsl.py  test_lineage.py  test_search.py  test_search_utils.py  test_update_assets_tool.py
modelcontextprotocol/tools/: SUGGESTION_IMPLEMENTATION.md  __init__.py  assets.py  context_repo.py  custom_metadata_context.py  custom_metadata_detector.py  custommetadata.py  docs.py  domain.py  domains.py  dq_rules.py  dsl.py  glossary.py  lineage.py  llms_txt.py  models.py  ownership.py  query.py  search.py  tags.py  workflow.py  workflows.py
modelcontextprotocol/utils/: __init__.py  asset_history.py  assets.py  cache_manager.py  constants.py  custom_metadata_context.py  custom_metadata_detector.py  formatting.py  glossary_utils.py  headers.py  parameters.py  search.py  toon.py  toon_config.py
