[tool.poetry]
name = "agent-toolkit"
version = "0.1.0"
description = "Atlan Model Context Protocol server for interacting with Atlan services"
authors = ["Atlan <support@atlan.com>"]
readme = "README.md"
packages = [{include = "modelcontextprotocol"}]

[tool.poetry.dependencies]
python = ">=3.10"
pyatlan = "^6.0.1"
fastmcp = "^0.4.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pre-commit = "^3.6.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
