[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlan-mcp-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cyclopts",
    "fastmcp>=2.14,<3",
    "python-dotenv",
    "keyring",
    "rich",
]

[project.scripts]
atlan = "atlan_cli:main"

[tool.setuptools]
py-modules = ["atlan_cli"]
